--- a/styles/main2.css
+++ b/styles/main2.css
@@ -1,3 +1,7 @@
 body{
-  background: "stars.jpg";
+  background: url(landscape.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
