Added Favorite Video Page, Edited Links

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,3 +7,12 @@ p{
   font-color: "black";
   font-size: 16px;
 }
+
+.navbar.center .navbar-inner {
+    text-align: center;
+}
+
+.navbar.center .navbar-inner .nav {
+    display:inline-block;
+    float: none;
+}
