--- a/styles/main2.css
+++ b/styles/main2.css
@@ -5,3 +5,12 @@ body{
 -o-background-size: cover;
 background-size: cover;
 }
+
+.navbar.center .navbar-inner {
+    text-align: center;
+}
+
+.navbar.center .navbar-inner .nav {
+    display:inline-block;
+    float: none;
+}
