--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,9 @@
 body{
-  background-image: url("landscape.jpg");
+  background: url(landscape.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
 
 p{
@@ -8,11 +12,12 @@ p{
   font-size: 16px;
 }
 
-.navbar.center .navbar-inner {
-    text-align: center;
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
 }
 
-.navbar.center .navbar-inner .nav {
-    display:inline-block;
-    float: none;
+.navbar .navbar-collapse {
+  text-align: center;
 }
