--- a/styles/main2.css
+++ b/styles/main2.css
@@ -6,11 +6,18 @@ body{
 background-size: cover;
 }
 
-.navbar.center .navbar-inner {
-    text-align: center;
+body{
+
+}
+p{
+  
+}
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
 }
 
-.navbar.center .navbar-inner .nav {
-    display:inline-block;
-    float: none;
+.navbar .navbar-collapse {
+  text-align: center;
 }
